--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
+  firebase_auth: ^4.4.2
 
 dev_dependencies:
   flutter_test:
@@ -70,20 +72,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/homePage.jpg
-    - assets/mainPage.jpg
-    - assets/Theatre.jpg
     - assets/camera.jpg
-    - assets/venom.jpg
-    - assets/movieCamera.jpg
-    - assets/background.jpg
     - assets/background.png
-    - assets/sajal_formal.jpg
     - assets/aakash_photo.png
-    - assets/madhur.jpg
     - assets/sanchi.jpg
     - assets/logo.png
     - assets/icon.png
+    - assets/madhurg.jpg
+    - assets/sajal.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
